src/objects/Attribute_Value__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>The Account this attribute decribes</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Attribute Values</relationshipLabel>
        <relationshipName>Attribute_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <formula>Attribute_Set_Item__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Set_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The definition of this attribute</description>
        <label>Attribute Set Item</label>
        <referenceTo>Attribute_Set_Item__c</referenceTo>
        <relationshipLabel>Attribute Values</relationshipLabel>
        <relationshipName>Attribute_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute_Set__c</fullName>
        <formula>Attribute_Set_Item__r.Attribute_Set__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value - Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_Currency__c</fullName>
        <label>Value - Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Date__c</fullName>
        <label>Value - Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value_Number__c</fullName>
        <label>Value - Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Percent__c</fullName>
        <label>Value - Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Value_Picklist__c</fullName>
        <label>Value - Picklist</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <formula>CASE(  Attribute_Set_Item__r.Attribute_Type__c  , 
&quot;Checkbox&quot;, IF( Value_Checkbox__c , &quot;Y&quot;, &quot;N&quot;),
&quot;Currency&quot;,  TEXT(Value_Currency__c) , 
&quot;Date&quot;, TEXT(  Value_Date__c ),
&quot;Number&quot;, TEXT(Value_Number__c) ,
&quot;Percent&quot;,  TEXT(Value_Percent__c) ,
&quot;Picklist&quot;, Value_Picklist__c ,  
&quot;Default Value&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <type>Text</type>
    </fields>
    <label>Attribute Value</label>
    <nameField>
        <displayFormat>ATTR{0000000000}</displayFormat>
        <label>Attribute Value ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>